# astro

./: .cursorrules  .gitignore  AI_INTEGRATION_FIX.md  ANDROID_EXPO_FIX.md  ANDROID_REQUIRE_DEBUG.md  ANDROID_REQUIRE_ERROR_FIXED.md  ANDROID_STUDIO_TESTING.md  ANDROID_TURBOMODULE_FINAL_FIX.md  APK_DISTRIBUTION_GUIDE.md  ARCHITECTURE_FIX_COMPLETE.md  ASSETS_SETUP_COMPLETE.md  ASTROLOGER_API_FIX.md  ASTROLOGER_FEATURES_COMPLETE.md  ASTROLOGER_INTEGRATION_FIX.md  ASTROLOGER_PERSONA_GUIDE.md  ASTROLOGER_SYSTEM_COMPLETE.md  AUDIO_PLAYBACK_FIX.md  AWS_API_TEST_REPORT.md  AWS_API_TEST_RESULTS.md  AWS_ARCHITECTURE_SPEC.md  AWS_DATABASE_INITIALIZATION.md  AWS_DATABASE_STATUS.md  AWS_DATA_VIEWER_GUIDE.md  Astrologer_chat_persona_improvV1.md  BACKEND_API_TEST_RESULTS.md  BUILD_SUCCESS_SUMMARY.md  BULLETPROOF_INPUT_FIX.md  CDK_DATABASE_INTEGRATION.md  CHAT_AND_VOICE_FIXES.md  CHAT_HISTORY_FIX_SUMMARY.md  CHAT_IMPROVEMENTS_SUMMARY.md  CHAT_MESSAGE_FIX.md  CHAT_MODEL_CONFIG_SUMMARY.md  CHAT_REDESIGN_PROGRESS.md  CLEANUP_INSTRUCTIONS.md  COMMIT_SUMMARY.md  CRITICAL_FIXES.md  DATABASE_SUMMARY.txt  DATA_VISIBILITY_COMPLETE.md  DEBUG_INPUT_RENDERING.md  (+168 more)
.cursor/: SESSION_MANAGEMENT.md
astro-voice-aws-infra/: package-lock.json
astro-voice-mobile/: ASSET_INTEGRATION_GUIDE.md  App.tsx  COMPREHENSIVE_LAYOUT_FIX.md  HOW_TO_START_APP.md  LAYOUT_FIXES_APPLIED.md  LAYOUT_FIX_SUMMARY.md  SCREENS_CREATED.md  START_APP.sh  app.json  package-lock.json  package.json  updateAwsConfig.js
backend/: README.md  __main__.py  main.py
data/: astrologer_personas.json  user_profiles.json
(+199 files in other folders)
